# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.57 2007/01/09 20:15:41 vapier Exp $

  09 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  files/timezone-data-2005n-makefile.patch:
  Default to -std=gnu99 rather than -std=c99 #161183 by Sandro.

*timezone-data-2007a (09 Jan 2007)

  09 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2007a.ebuild:
  Version bump #160957 by Rodrigo Severo.

  31 Dec 2006; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2006p.ebuild:
  Add support for updating /etc/localtime via TIMEZONE in /etc/conf.d/clock.

*timezone-data-2006p (29 Nov 2006)

  29 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2006p.ebuild:
  Version bump #156416 by Rodrigo Severo.

*timezone-data-2006o (06 Nov 2006)

  06 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2006o.ebuild:
  Version bump #154268 by Rodrigo Severo.

  06 Nov 2006; Roy Marples <uberlord@gentoo.org> timezone-data-2006n.ebuild:
  Link to intl in non glibc systems when requesting nls.
  Fixes #154181 thanks to Timothy Redaelli.

  04 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  files/timezone-data-2005n-makefile.patch, timezone-data-2006n.ebuild:
  Add support for USE=nls #154070 by Benno Schulenberg.

  27 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  timezone-data-2006n.ebuild:
  Stable on x86 wrt bug #151539.

  21 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  timezone-data-2006n.ebuild:
  Stable on Alpha + ia64, bug 151539.

  21 Oct 2006; Jeroen Roovers <jer@gentoo.org> timezone-data-2006n.ebuild:
  Stable for HPPA (bug #151539).

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  timezone-data-2006n.ebuild:
  ppc stable, bug #151539

  18 Oct 2006; Patrick McLean <chutzpah@gentoo.org>
  timezone-data-2006n.ebuild:
  Stable on amd64 (bug #151539).
