@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.57 2007/01/09 20:15:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.58 2007/01/13 19:01:03 vapier Exp $
+
+  13 Jan 2007; Mike Frysinger <vapier@gentoo.org>
+  timezone-data-2007a.ebuild:
+  Move timezone update to pkg_config so people can refresh it automatically as
+  suggested by Stefano Varesi.
 
   09 Jan 2007; Mike Frysinger <vapier@gentoo.org>
   files/timezone-data-2005n-makefile.patch:
